8278753: Runtime crashes with access violation during JNI_CreateJavaVM call